feat: mise en production avec livrable .jar, scripts lanceurs portables et centralisation de la documentation